added move search an initial pane

--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -169,6 +169,7 @@ textarea
 @import './components/proficiencies/proficiencies'
 @import './components/motivations/motivations'
 @import './components/notes/notes'
+@import './components/moves/moves'
 
 .sheet-debilities
   margin-bottom: 0px
@@ -335,13 +336,11 @@ input.sheet-filler[type="radio"] + span::before
 input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + span::before
   content: ""
 
-.sheet-moves,
 .sheet-oracles
   display: flex
   flex-wrap: wrap
   flex-direction: column
 
-.sheet-move,
 .sheet-oracle
   margin: 0em
   color: #4C4D4F
@@ -470,40 +469,24 @@ input[type=radio].sheet-take-hiatus:checked ~ div.sheet-take-hiatus
   font-size: 1em
   font-weight: bold
 
-.sheet-move-column,
 .sheet-oracle-column
   display: flex
   flex-direction: column
   margin-right: 10px
 
-.sheet-move-outline,
 .sheet-theme-outline
   border: 1px solid #414042
 
-span.sheet-move-result,
 span.sheet-oracle-result
   width: 36em
 
-.sheet-move-box,
 .sheet-oracle-box
   border: 2px solid #414042
   box-sizing: border-box
   width: 100%
 
-.sheet-move-box:nth-child(n+2),
 .sheet-oracle-box:nth-child(n+2)
   margin-top: 10px
-
-.sheet-move-title
-  background-color: #414042
-  color: #fff
-  border-bottom: 1px solid #414042
-  font-size: 1.4em
-  font-weight: bold
-  padding-left: 5px
-  padding-right: 5px
-  text-transform: uppercase
-  width: 11.7em
 
 .sheet-oracle-title
   background-color: #414042
@@ -516,18 +499,15 @@ span.sheet-oracle-result
   text-transform: uppercase
   width: 12.3em
 
-.sheet-move-preview,
 .sheet-oracle-table-preview
   width: auto
 
-.sheet-move-show,
 .sheet-oracle-show
   display: inline-flex
   font-size: 1em
   margin: 0em
   padding: 0.3em
 
-.sheet-move-show:hover,
 .sheet-oracle-show:hover
   background: #969696
   cursor: pointer
@@ -537,7 +517,6 @@ span.sheet-oracle-result
   flex-flow: column wrap
   width: 22.5em
 
-.sheet-move-table,
 .sheet-oracle-table
   border: 2px solid #414042
   width: 45em
@@ -563,7 +542,6 @@ span.sheet-oracle-result
 .sheet-oracle-result-4-column
   width: 22em
 
-.sheet-move:nth-child(2n+1),
 .sheet-oracle-row:nth-child(2n+1),
 .sheet-oracle:nth-child(2n+1)
   background-color: #ddd
@@ -607,30 +585,6 @@ span.sheet-preview-roll
 
 .sheet-button-container-preview
   width: 2.4em
-
-.sheet-move-description
-  width: 26em
-  padding: 1em
-
-.sheet-move-container
-  display: flex
-  /* justify-content: space-around; */
-  /* width: 500px; */
-  font-family: Verdana, Arial, sans-serif
-  font-size: 1em
-  font-weight: normal
-
-.sheet-move-table
-  border: none
-  width: 30.5em
-  font-size: 12px
-
-.sheet-move-roll
-  width: 18%
-
-span.sheet-preview-move-roll
-  width: 60%
-  margin-left: 1em
 
 /* ASSETS */
 input[type="checkbox"].sheet-showhide:checked ~ div.sheet-showhide,
@@ -927,8 +881,7 @@ input.sheet-border-bottom
   border-bottom: 1px solid #4C4D4F
   border-radius: 0em
 
-.sheet-oracle-footer,
-.sheet-move-footer
+.sheet-oracle-footer
   background-color: #434b4d
   color: #ffffff
   line-height: 0.9em
