--- a/Ironcrunch/src/components/motivations/motivations.styl
+++ b/Ironcrunch/src/components/motivations/motivations.styl
@@ -34,6 +34,7 @@ for id in motivations
   padding 0
   line-height 23px
   cursor pointer
+  -webkit-appearance menulist
 
 .sheet-motivation-container
   padding 0em 1em 1em 1em
