--- a/Ironcrunch/src/components/moves/moves.pug
+++ b/Ironcrunch/src/components/moves/moves.pug
@@ -1,9 +1,50 @@
+include ./data/list.pug
+include ./mixins/nav.pug
+
 //- ## Search Bar
-
-//- ## List of Moves
-//- A full list of all moves that let you link off to the preview page. (Include roll option for veterans)
-
+input(type='radio' class='sheet-hide sheet-full-move-list' name='attr_move_view' value='1' checked)
+div.sheet-full-move-list.sheet-showhide
+  div.sheet-search-bar
+    input(type='text' class='sheet-search-bar' name='attr_move_search' placeholder='Search')
+    label.sheet-clear-search CLEAR
+      input(type='checkbox' class='sheet-hide' name='attr_clear_search')
+  //- ## List of Moves
+  div.sheet-move-container
+    input(type='radio' class='sheet-hide' name='attr_selected_move')
+    each group in moveGroups
+      div.sheet-move-group
+        div.sheet-move-group-title
+          h3=group.title
+        each move in group.moves
+          div.sheet-move-list
+            label.sheet-move
+              input(type='radio' class='sheet-hide sheet-selected-move' name='attr_selected_move' value=move.value)
+              input(type='checkbox' class='sheet-hide sheet-move-highlight' name=`attr_${move.value}_highlight`)
+              div.sheet-move-name=move.name
 //- ## Move Details
+input(type='radio' class='sheet-hide sheet-move-preview' name='attr_move_view' value='2')
+div.sheet-move-preview.sheet-showhide
+  div.sheet-search-bar
+    input(type='text' class='sheet-search-bar' name='attr_move_search' placeholder='Search')
+    label.sheet-clear-search CLEAR
+      input(type='checkbox' class='sheet-hide' name='attr_clear_search')
+    label.sheet-close-preview CLOSE PREVIEW
+      input(type='checkbox' class='sheet-hide' name='attr_close_move_preview')
+  div.sheet-move-container
+    div.sheet-move-scroll-list
+      each group in moveGroups
+        div.sheet-move-group-scroll
+          div.sheet-move-group-title
+            h3=group.title
+          each move in group.moves
+            div.sheet-move-list
+              label.sheet-move
+                input(type='radio' class='sheet-hide' name='attr_selected_move' value=move.value)
+                input(type='checkbox' class='sheet-hide sheet-move-highlight' name=`attr_${move.value}_highlight`)
+                div.sheet-move-name=move.name
+    div.sheet-move-preview
+      div.sheet-move-preview-title
+        h3 PAY THE PRICE
 //- Scroll List of moves with collapsable groups
 //- Preview of Move
 //- Button to close preview and go to previous page
