--- a/Ironcrunch/src/workers/Ironcrunch.pug
+++ b/Ironcrunch/src/workers/Ironcrunch.pug
@@ -6,3 +6,4 @@ script(type="text/worker")
   include ./scripts/stats.js
   include ./scripts/ancestry.js
   include ./scripts/motivations.js
+  include ./scripts/moves.js
