new layout + tabs

--- a/Pendragon-french/Pendragon-french.css
+++ b/Pendragon-french/Pendragon-french.css
@@ -6,6 +6,10 @@ h2, h3 {
     color: var(--pendragon-blue);
 }
 
+input, label {
+    display: inline;
+}
+
 /* TABS */
 div.sheet-tab-content { display: none; }
 
@@ -18,87 +22,199 @@ input.sheet-tab5:checked ~ div.sheet-tab5
     display: block;
 }
 
+div.sheet-cale {
+    display:inline;
+}
+
+.charsheet div.sheet-tab-content.sheet-tab2 {
+    margin-left: 0px;
+    padding-left: 10px;
+}
+.sheet-logo {
+    max-height: 100px;
+}
+.sheet-center{
+    text-align: center;
+}
+
+div.sheet-center {
+
+    width:100%;
+}
+
+.sheet-big {
+    font-size: 1.5em;
+    color: var(--pendragon-blue);
+    margin-bottom : 5px;
+}
+
+.sheet-inline {
+    display:inline;
+}
+
 input.sheet-tab
 {
-    width: 150px;
+    /*width: 150px;*/
+    width: calc(18% + 10px);;
     height: 20px;
     position: relative;
-    top: 0px;
-    left: 5px;
-    margin: -1.5px;
-    margin-bottom: 5px;
+    /*left: 5px;*/
+    /*margin: -1.5px;*/
+    /*margin-bottom: 5px;*/
     cursor: pointer;
     z-index: 1;
     opacity: 0;
+    border: 2px;
+    border-color: var(--pendragon-blue);
+    /*margin-left: 3px;*/
 }
+
+.sheet-mid{
+    width: 68%;
+}
+
+label.sheet-t1c1 {
+    display:inline-block;
+    width:67px;
+}
+
+span.sheet-t1c1 {
+    font-weight: bold;
+}
+
+input.sheet-long.sheet-t1c1, input.sheet-big.sheet-t1c1, select.sheet-long.sheet-t1c1 {
+    width: 68%;
+    text-align: center;
+}
+
+.sheet-t1c2 {
+    display:inline-block;
+    font-size: 1em;
+    height: 18px;
+}
+
+input.sheet-t1c2-big[type=number] {
+    width: 3.8em;
+    height: 18px;
+}
+
+label.sheet-t1c2 {
+    width:90px;
+}
+input.sheet-t1c2 {
+    width:45px;
+    height: 18px;
+}
+input.sheet-t1c3-big {
+    font-size: 1.5em;
+}
+
+.sheet-t1c3 {
+    font-size: 1.2em;
+    height: 18px;
+}
+
+.sheet-concat {
+    padding-right: 0px;
+}
+
+.sheet-t1c3[type=checkbox] {
+    margin:-5px;
+}
+
+.sheet-t1c3-short {
+    display:inline-block;
+    width:15px;
+}
+
+.sheet-t1c3-medium {
+    display:inline-block;
+    width:25px;
+    background-color: transparent;
+    border: none;
+}
+
+
 
 input.sheet-tab + span::before
 {
     content:attr(title);
 
-    border: solid 1px #a8a8a8;
-    border-bottom-color: black;
+    border: solid 1px var(--pendragon-blue);
+    /*border-bottom-color: black;*/
     text-align: center;
+    vertical-align: center;
     display: inline-block;
+    background-color: #c8c8c8;
+    font-weight: normal;
+    width: 18%;
 
-    background: #fff;
-    background: -moz-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    background: -webkit-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    background: -ms-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    background: -o-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    background: linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
+    /*background: #fff;*/
+    /*background: -moz-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
+    /*background: -webkit-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
+    /*background: -ms-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
+    /*background: -o-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
+    /*background: linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
 
-    width: 150px;
+    /*width: 150px;*/
     height: 20px;
     font-size: 18px;
 
     position: absolute;
     top: 70px;
-    left: 30px;
+    left: 35px;
 }
 
 input.sheet-tab:checked + span::before
 {
-    background: #dcdcdc;
-    background: -moz-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);
-    background: -webkit-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);
-    background: -ms-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);
-    background: -o-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);
-    background: linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);
-    border-bottom-color: #fff;
+    border: solid 2px var(--pendragon-blue);
+    font-weight: bold;
+    color: var(--pendragon-blue);
+    background-color: transparent;
+    /*background: #dcdcdc;*/
+    /*background: -moz-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);*/
+    /*background: -webkit-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);*/
+    /*background: -ms-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);*/
+    /*background: -o-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);*/
+    /*background: linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);*/
+    /*border-bottom-color: #fff;*/
 }
 
-input.sheet-tab:not(:first-child) + span::before
-{
-    border-left: none;
-}
+/*input.sheet-tab:not(:first-child) + span::before*/
+/*{*/
+/*    border-left: none;*/
+/*}*/
 
 input.sheet-tab2 + span::before
 {
-left: 180px;
+/*left: 180px;*/
+    left: calc(18% + 39px);
 
 
-    background: #fff;
-    background: -moz-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    background: -webkit-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    background: -ms-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    background: -o-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
-    background: linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
+    /*background: #fff;*/
+    /*background: -moz-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
+    /*background: -webkit-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
+    /*background: -ms-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
+    /*background: -o-linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
+    /*background: linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);*/
 }
 
 input.sheet-tab3 + span::before
 {
-    left: 330px;
+    /*left: 330px;*/
+    left: calc(36% + 43px);
 }
 
 
 input.sheet-tab4 + span::before
 {
-    left: 480px;
+    /*left: 480px;*/
+    left: calc(54% + 47px);
 }
 input.sheet-tab5 + span::before
 {
-    left: 630px;
+    /*left: 630px;*/
+    left: calc(72% + 51px);
 }
 
 
@@ -106,31 +222,53 @@ div.sheet-tab-content
 {
     border: 1px solid #a8a8a8;
     border-top-color: #000;
-    margin: 2px 0 0 5px;
+    margin-top: 5px;
     padding: 5px;
 }
 
 
 /* sheet */
 
-.sheet-col strong.sheet-dee {
+.sheet-col strong.sheet-dee, .sheet-col1 strong.sheet-dee, .sheet-col2 strong.sheet-dee, .sheet-col3 strong.sheet-dee {
     font-size: 1em;
     font-weight: bold;
+    margin-right: 20px;
 }
+
+.sheet-col1 {
+    display: inline-block;
+    width: 40%;
+}
+.sheet-col2 {
+    display: inline-block;
+    vertical-align: top;
+    padding-top: 10px;
+    padding-left: 15px;
+    width: 23%;
+}
+.sheet-col3 {
+    display: inline-block;
+    vertical-align: top;
+    padding-top: 10px;
+    width: 33%;
+}
+
 .charsheet input,.charsheet select {
    font-weight:bold;
    text-align:center;
 }
 
-.charsheet input.sheet-long {
+.charsheet input.sheet-long, select.sheet-long {
     width: 10em;
+    padding-top: 0px;
 }
 
-.charsheet select.sheet-long {
-    width: 12em;
+.charsheet input.sheet-long {
+    height: 18px;
 }
+
 .charsheet input.sheet-short {
-    width: 4em;
+    width: 70px;
 }
 .charsheet checkbox {
     margin-left: 50px;
@@ -171,16 +309,6 @@ select.sheet-dtype {
     width: 60px;
     vertical-align: top;
 }
-.sheet-baseinfo {
-    display: inline-block;
-    width: 145px;
-    margin-right: 3px;
-
-}
-
-label {
-
-}
 
 input {
     padding: 0px;
@@ -194,9 +322,10 @@ hr {
     border-top-color: var(--pendragon-blue);
 }
 
-.sheet-comp input, .sheet-comp button,  .sheet-comp checkbox {
+input, .sheet-comp input, .sheet-comp button,  .sheet-comp checkbox {
     display: inline;
-}*/
+}
+
 sheet-titre2 {
    display: inline-block;
    width: 120px;
@@ -207,10 +336,31 @@ sheet-titre2 {
     width:130px;'
 }
 
+.sheet-right {
+    text-align: right;
+}
+.sheet-info {
+    width: 120px;
+    display: inline;
+    background-color: transparent;
+    border: none;
+}
+
 .sheet-tiny {
     font-size: 0.7em;
     display:inline;
     padding-right: 2px;
+}
+
+.sheet-item-line {
+    display: inline-block;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.sheet-spacer-15 {
+    display:inline;
+    width: 15px;
 }
 
 .sheet-italic {
@@ -218,10 +368,19 @@ sheet-titre2 {
 }
 
 .sheet-border {
+    display: inline-block;
     border: 1px;
     border-color: var(--pendragon-blue);
     border-style: solid;
     padding: 5px;
+}
+
+.sheet-select {
+    margin-bottom: 0px;
+    vertical-align: top;
+}
+.sheet-text-basic {
+    font-weight: bold;
 }
 
 .sheet-dice-button{
@@ -235,7 +394,7 @@ sheet-titre2 {
     width: 80px;
 }
 
-.repitem {
+.rc-tiny .repitem {
     height: 20px;
     margin-bottom: 6px;
 }
@@ -317,6 +476,12 @@ sheet-titre2 {
 }
 .sheet-checkbox-religion + label {
     text-decoration: none;
+}
+
+fieldset.repeating_horse+.repcontainer .repitem {
+    /*display: inline-block;*/
+    /*margin-right: 2em;*/
+    height: 110px;
 }
 
 
