Update Salvo Image

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -521,20 +521,24 @@ span.sheet-salvoMode
 /* Inactive Salvo Mode Button*/
 input.sheet-salvoRollButton + span.sheet-salvoMode
 {
-	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/sys-int.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/salvo.png);
 	background-repeat: repeat;
 	background-position: top;
 	opacity: 1;
 	background-size: 25px 25px;
+	top: 170px;
+	left: 0;
 }
 /* Active Salvo Mode Button*/
 input.sheet-salvoRollButton:checked + span.sheet-salvoMode
 {
-	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/sys-int2.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/salvoDeactivate.png);
 	background-repeat: repeat;
 	background-position: top;
 	opacity: 1;
 	background-size: 25px 25px;
+	top: 170px;
+	left: 0;
 }
 
 /* Salvo Widget */
