Update Salvo Image

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -492,7 +492,7 @@ select.sheet-typeSelector
 .sheet-salvoRollButton
 {
 	position: absolute;
-	top: 170px;
+	top: 0;
 	left: 0;
 }
 
@@ -502,44 +502,54 @@ input[type="checkbox"].sheet-hideSalvoModeCheckbox
 	opacity: 0;
 	cursor: pointer;
 	z-index: 19;
-	width: 25px;
-	height: 200px;
+	width: 42px;
+	height: 42px;
 	margin: 0;
 	padding: 0;
-	font-size: 25px;
+	font-size: 36px;
 	vertical-align: top;
 }
 
 span.sheet-salvoMode
 {
 	z-index: 18;
-	width: 25px;
-	height: 200px;
+	width: 42px;
+	height: 42px;
 	vertical-align: top;
 }
 
 /* Inactive Salvo Mode Button*/
-input.sheet-salvoRollButton + span.sheet-salvoMode
+input.sheet-salvoRollButton + span.sheet-salvoRollButton 
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/salvo.png);
-	background-repeat: repeat;
+	background-repeat: no-repeat;
 	background-position: top;
 	opacity: 1;
-	background-size: 25px 25px;
-	top: 170px;
-	left: 0;
+	background-size: 42px 42px;
 }
+
+	input.sheet-salvoRollButton + span.sheet-salvoRollButton, input.sheet-salvoRollButton
+	{
+		top: 338px;
+		left: 663px;
+	}
+
 /* Active Salvo Mode Button*/
-input.sheet-salvoRollButton:checked + span.sheet-salvoMode
+input.sheet-salvoRollButton:checked + span.sheet-salvoRollButton
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/salvoDeactivate.png);
-	background-repeat: repeat;
+	background-repeat: no-repeat;
 	background-position: top;
 	opacity: 1;
-	background-size: 25px 25px;
-	top: 170px;
-	left: 0;
+	background-size: 42px 42px;
 }
+
+		input.sheet-salvoRollButton:checked + span.sheet-salvoRollButton, input.sheet-salvoRollButton:checked
+		{
+			top: 150px;
+			left: 870px;
+		}
+
 
 /* Salvo Widget */
 .sheet-salvo
