--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
@@ -306,6 +306,14 @@ input.sheet-hidden {
 }
 
 
+select.sheet-diceselect {
+    width: max-content;
+    min-width: 3em;
+}
+span.sheet-diceselect {
+    margin: 5px;
+}
+
 /* sections */
 
 div.sheet-middle-tab {
@@ -1776,7 +1784,7 @@ input[type="checkbox"].sheet-show_status_mod~* {
     --status_visibility: visible;
     --anmerkung_display: none;
     --anmerkung_visibility: hidden;
-    --talent-grid-template: 20fr repeat(3, 3em) 2em 4em repeat(2, 3em) repeat(2, 4em)  repeat(7, 1em) 5em 1em 1fr; 
+    --talent-grid-template: 20fr repeat(3, 3em) 2em 4em repeat(2, 3em) repeat(3, 4em)  repeat(8, 1em) 5em 1em 1fr; 
     
 }
 
@@ -1785,7 +1793,7 @@ input[type="checkbox"].sheet-show_status_mod:checked~* {
     --status_visibility: hidden;
     --anmerkung_display: inline;
     --anmerkung_visibility: visible;
-    --talent-grid-template: 20fr repeat(3, 3em) 2em 4em repeat(2, 3em) repeat(2, 4em) 25fr 1fr;
+    --talent-grid-template: 20fr repeat(3, 3em) 2em 4em repeat(2, 3em) repeat(3, 4em) 20fr 1fr;
 }
 
 .sheet-talent-tooltip {
@@ -1852,13 +1860,13 @@ input[type="checkbox"].sheet-show_status_mod:checked~* {
 
 .sheet-talent-header5 {
     text-align: center;
-    grid-column: 9/9;
+    grid-column: 10/10;
     font-weight: bold;
 }
 
 .sheet-talent-header6 {
     text-align: center;
-    grid-column: 10 /10;
+    grid-column: 11 /11;
     font-weight: bold;
 }
 
@@ -1870,14 +1878,14 @@ input[type="checkbox"].sheet-show_status_mod:checked~* {
     width: max-content;
     display: var(--anmerkung_display);
     visibility: var(--anmerkung_visibility);
-    grid-column: 11 /11;
+    grid-column: 12 /12;
     font-weight: bold;
 }
 
 .sheet-talent-header8 {
     text-align: left;
     width: max-content;
-    grid-column: 12 /12;
+    grid-column: 13 /13;
     display: var(--status_display);
     visibility: var(--status_visibility);
     font-weight: bold;
@@ -1886,7 +1894,7 @@ input[type="checkbox"].sheet-show_status_mod:checked~* {
 .sheet-talent-header10 {
     display: none;
     text-align: center;
-    grid-column: 20 /20;
+    grid-column: 21 /21;
     font-weight: bold;
 }
 
@@ -1933,16 +1941,20 @@ input[type="checkbox"].sheet-show_status_mod:checked~* {
     grid-column: 8 /8;
 }
 
+.sheet-talent-bt3 {
+    grid-column: 9 /9;
+}
+
 .sheet-talent-sfmod {
     width: 4em;
     text-align: center;
-    grid-column: 9 /9;
+    grid-column: 10 /10;
 }
 
 .sheet-talent-efmod {
     width: 4em;
     text-align: center;
-    grid-column: 10 /10;
+    grid-column: 11 /11;
 }
 
 .sheet-talent-description {
@@ -1952,47 +1964,53 @@ input[type="checkbox"].sheet-show_status_mod:checked~* {
     text-align: left;
     display: var(--anmerkung_display);
     visibility: var(--anmerkung_visibility);
-    grid-column: 11 /11;
+    grid-column: 12 /12;
 }
 
 .sheet-talent-cb1 {
-    grid-column: 12 /12;
-    display: var(--status_display);
-    visibility: var(--status_visibility);
-}
-
-.sheet-talent-cb2 {
     grid-column: 13 /13;
     display: var(--status_display);
     visibility: var(--status_visibility);
 }
 
-.sheet-talent-cb3 {
+.sheet-talent-cb2 {
     grid-column: 14 /14;
     display: var(--status_display);
     visibility: var(--status_visibility);
 }
 
-.sheet-talent-cb4 {
+.sheet-talent-cb3 {
     grid-column: 15 /15;
     display: var(--status_display);
     visibility: var(--status_visibility);
 }
 
-.sheet-talent-cb5 {
+.sheet-talent-cb4 {
     grid-column: 16 /16;
     display: var(--status_display);
     visibility: var(--status_visibility);
 }
 
-.sheet-talent-cb6 {
+.sheet-talent-cb5 {
     grid-column: 17 /17;
     display: var(--status_display);
     visibility: var(--status_visibility);
 }
 
-.sheet-talent-cb7 {
+.sheet-talent-cb6 {
     grid-column: 18 /18;
+    display: var(--status_display);
+    visibility: var(--status_visibility);
+}
+
+.sheet-talent-cb7 {
+    grid-column: 19 /19;
+    display: var(--status_display);
+    visibility: var(--status_visibility);
+}
+
+.sheet-talent-cb8 {
+    grid-column: 20 /20;
     display: var(--status_display);
     visibility: var(--status_visibility);
 }
@@ -2000,7 +2018,7 @@ input[type="checkbox"].sheet-show_status_mod:checked~* {
 .sheet-talent-select1 {
     width: 75%;
     height: 75%;
-    grid-column: 19 /19;
+    grid-column: 21 /21;
     display: var(--status_display);
     visibility: var(--status_visibility);
 }
@@ -2008,7 +2026,7 @@ input[type="checkbox"].sheet-show_status_mod:checked~* {
 .sheet-talent-mod {
     display: none;
     width: 1em;
-    grid-column: 20 /20;
+    grid-column: 22 /22;
     
 }
 
@@ -2442,7 +2460,8 @@ button.sheet-kampf-header {
 }
 
 select.sheet-kampf-nah {
-    width: 7em;    
+    width: max-content;
+    min-width: 3em;    
 }
 
 input[type="checkbox"].sheet-npc-nk-cb {
