Added terminal image for salvo flowchart

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -546,8 +546,8 @@ input.sheet-salvoRollButton:checked + span.sheet-salvoRollButton
 
 		input.sheet-salvoRollButton:checked + span.sheet-salvoRollButton, input.sheet-salvoRollButton:checked
 		{
-			top: 150px;
-			left: 870px;
+			top: 172px;
+			left: 890px;
 		}
 
 
@@ -557,18 +557,26 @@ input.sheet-salvoRollButton:checked + span.sheet-salvoRollButton
 	position: absolute;
 	z-index: 10;
 	display: grid;
-	width: 900px;
+	left: 0;
+	grid-template-columns: 32px 450px 450px 100px;
+	grid-template-rows: 30px 133px 425px 620px 1200px;
+	grid-template-areas: ". title title . " ". taskDice threatDice ." ". skills skills ." ". tools tools . " ". . . .";
+	background-image: linear-gradient(to bottom, rgba(255,255,255,0.9),rgba(255,255,255,0.5),rgba(255,255,255,0.5),rgba(255,255,255,0.5),rgba(255,255,255,0.5),rgba(255,255,255,0.9),rgba(255,255,255,0.9),rgba(255,255,255,0.9),rgba(255,255,255,0.9));
+	background-size: 1000px 2400px;
+	width: 950px;
 	height: 2400px;
-	grid-template-columns: 1fr 80px 1fr;
-	grid-template-rows: 32px 1fr;
-	grid-template-areas: "title title title" "taskDice roller threatDice";
-	background: rgba(255,255,255,0.6)
 }
 
 .sheet-salvoTitle
 {
 	grid-area: title;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/terminal.png);
+	background-repeat: no-repeat;
+	background-position: center;
 	justify-self: center;
+	font-size: 28px;
+	color: #00b8e6;
+	font-weight: 700;
 }
 
 .sheet-taskDice
