Update Salvo Title

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -573,10 +573,16 @@ input.sheet-salvoRollButton:checked + span.sheet-salvoRollButton
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/terminal.png);
 	background-repeat: no-repeat;
 	background-position: center;
+	background-size: 109px 32px;
+	padding-top: 2px;
 	justify-self: center;
-	font-size: 28px;
-	color: #00b8e6;
-	font-weight: 700;
+	text-align: center;
+	vertical-align: central;
+	font-size: 20px;
+	color: #e6ffff;
+	font-weight: 600;
+	width: 109px;
+	height: 32px;
 }
 
 .sheet-taskDice
