update Salvo Title

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -579,7 +579,7 @@ input.sheet-salvoRollButton:checked + span.sheet-salvoRollButton
 	text-align: center;
 	vertical-align: central;
 	font-size: 20px;
-	color: #e6ffff;
+	color: #75CEFF;
 	font-weight: 600;
 	width: 109px;
 	height: 32px;
