Outbreak: fixed button macro typo

--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -55,7 +55,7 @@ include src/pug/_mixins.pug
 						.grid.header
 							h3(data-i18n='Adv')
 							h3(data-i18n='Tot')
-						each val, key in {'Hold':['willpower','perception'], 'Jump/Leap':['strength','perception'], 'Lift/Pull':['strenght','willpower'], 'Resist Pain':['willpower','strength'], 'Search':['perception','willpower'], 'Spot/Listen':['perception','willpower'], 'Stealth':['perception','willpower']}
+						each val, key in {'Hold':['willpower','perception'], 'Jump/Leap':['strength','perception'], 'Lift/Pull':['strength','willpower'], 'Resist Pain':['willpower','strength'], 'Search':['perception','willpower'], 'Spot/Listen':['perception','willpower'], 'Stealth':['perception','willpower']}
 							+skillList(key, val[0], val[1])
 
 					h2(data-i18n='Trained Skills') Trained Skills
