save trophy gold

--- a/Trophy Gold/css.css
+++ b/Trophy Gold/css.css
@@ -19,7 +19,7 @@ button {
     display: none; }
   button:focus, button:hover, button:active {
     background: none;
-    background-color: #79016f !important;
+    background-color: #1e1a1a !important;
     color: #fff;
     transform: scale(1.1);
     box-shadow: none; }
@@ -49,17 +49,12 @@ h2.sheet-label {
 
 input[type="text"], input[type="number"] {
   background-color: transparent;
-  border-left: 0rem;
-  border-radius: 0rem;
-  border-right: 0rem;
-  border-top: 0rem;
+  border: none;
   height: 2.1rem;
+  padding: 1% 2%;
   width: 100%; }
-  input[type="text"]::placeholder, input[type="number"]::placeholder {
-    background-color: #b9dadf;
-    border: 0.1em dotted #79016f; }
   input[type="text"]:hover, input[type="number"]:hover {
-    background-color: rgba(136, 121, 190, 0.25); }
+    background-color: #d8d6d0; }
 
 input[type='number'] {
   text-align: center;
@@ -75,7 +70,7 @@ label {
 select {
   margin-bottom: 0px;
   vertical-align: bottom;
-  border: 2px solid #79016f;
+  border: 2px solid #1e1a1a;
   font-weight: bold;
   text-transform: capitalize;
   margin-top: 8%;
@@ -97,7 +92,8 @@ textarea {
   padding: 2px;
   resize: vertical;
   vertical-align: top;
-  overflow: scroll; }
+  overflow: scroll;
+  background-color: transparent; }
 
 .charsheet {
   width: 850px; }
@@ -133,6 +129,9 @@ div.sheet-background {
   transform: rotate(180deg);
   writing-mode: vertical-lr; }
 
+.sheet-text-center {
+  text-align: center; }
+
 div.sheet-2column {
   grid-template-columns: repeat(2, 1fr); }
 
@@ -158,7 +157,7 @@ div.sheet-3columnbutton {
   grid-template-columns: auto 1fr 3rem; }
 
 h1 {
-  color: #79016f;
+  color: #1e1a1a;
   text-transform: capitalize;
   font-family: serif;
   font-size: 2.5rem; }
@@ -166,12 +165,19 @@ h1 {
 h2 {
   font-size: 1.5rem;
   line-height: 2rem;
-  text-transform: capitalize; }
+  text-transform: capitalize;
+  font-variant: small-caps;
+  margin-bottom: 2%; }
 
 h3 {
   font-size: 1.25rem;
   line-height: 2rem;
-  text-transform: capitalize; }
+  text-transform: capitalize;
+  font-style: italic; }
+
+h4 {
+  font-size: 0.8rem;
+  text-transform: uppercase; }
 
 label {
   font-size: 3rem; }
@@ -198,7 +204,7 @@ label {
   text-align: right; }
 
 .sheet-text-primary {
-  color: #79016f; }
+  color: #1e1a1a; }
 
 /* GRID
   ============================= */
@@ -217,23 +223,23 @@ input.sheet-toggles {
   width: 100%;
   z-index: 2; }
   input.sheet-toggles:checked + span {
-    color: #79016f;
+    color: #1e1a1a;
     margin-left: 5%; }
 
 /* HEADER
 	============================= */
 div.sheet-header {
   margin-top: 2%;
-  border-top: 2px solid #79016f;
-  border-bottom: 2px solid #79016f;
+  border-top: 2px solid #1e1a1a;
+  border-bottom: 2px solid #1e1a1a;
   text-align: center;
   background: #b9dadf;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #b9dadf 0%, rgba(136, 121, 190, 0.25) 50%, #b9dadf 100%);
+  background: -moz-linear-gradient(top, #b9dadf 0%, #d8d6d0 50%, #b9dadf 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #b9dadf 0%, rgba(136, 121, 190, 0.25) 50%, #b9dadf 100%);
+  background: -webkit-linear-gradient(top, #b9dadf 0%, #d8d6d0 50%, #b9dadf 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #b9dadf 0%, rgba(136, 121, 190, 0.25) 50%, #b9dadf 100%);
+  background: linear-gradient(to bottom, #b9dadf 0%, #d8d6d0 50%, #b9dadf 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$light', endColorstr='$light',GradientType=0 );
   /* IE6-9 */ }
@@ -242,7 +248,7 @@ div.sheet-header {
     ============================= */
 div.sheet-pc {
   border: 0.8em solid #4c4c4c;
-  background-color: rgba(77, 77, 77, 0.0784314);
+  background-color: #d8d6d0;
   padding: 2% 1%;
   grid-template-columns: 3fr 2fr 0.5fr;
   grid-row-gap: 1%;
@@ -250,73 +256,145 @@ div.sheet-pc {
   -webkit-box-shadow: inset 0 0 10px #000000;
   box-shadow: inset 0 0 10px #000000; }
   div.sheet-pc h1 {
-    grid-area: 1 / 1 / 1 / 4; }
+    grid-area: 1 / 1 / 1 / 4;
+    border-bottom: 0.5rem solid black; }
   div.sheet-pc label {
     border: 1px solid black; }
   div.sheet-pc div.sheet-row {
-    display: inline-grid; }
+    display: inline-grid;
+    margin-bottom: 5%; }
+  div.sheet-pc div.sheet-skill {
+    padding: 1% 2%;
+    overflow: hidden; }
+  div.sheet-pc div.sheet-training div.sheet-skill,
+  div.sheet-pc div.sheet-library div.sheet-skill {
+    border-left: 0.5rem solid black; }
   div.sheet-pc div.sheet-hoard {
     grid-template-columns: repeat(10, 1fr);
-    border-bottom: 2px solid black; }
+    grid-row-gap: 2%;
+    border-bottom: 2px solid black;
+    padding-bottom: 5%; }
+    div.sheet-pc div.sheet-hoard h2 {
+      grid-area: 1 / 1 / 1 / 11; }
+    div.sheet-pc div.sheet-hoard label {
+      border: none; }
+  div.sheet-pc div.sheet-household textarea {
+    border-left: 0.5rem solid black; }
   div.sheet-pc div.sheet-equipment {
     border-bottom: 2px solid black; }
+    div.sheet-pc div.sheet-equipment div.sheet-backpack,
+    div.sheet-pc div.sheet-equipment div.sheet-combat {
+      grid-column-gap: 1%; }
+    div.sheet-pc div.sheet-equipment div.sheet-repeating-container {
+      grid-column: 1 / 3; }
+    div.sheet-pc div.sheet-equipment div.sheet-armor,
+    div.sheet-pc div.sheet-equipment div.sheet-backpack {
+      grid-template-columns: 80% 1fr; }
+      div.sheet-pc div.sheet-equipment div.sheet-armor div.sheet-grid,
+      div.sheet-pc div.sheet-equipment div.sheet-backpack div.sheet-grid {
+        grid-template-columns: 80% 1fr; }
+    div.sheet-pc div.sheet-equipment div.sheet-combat {
+      grid-template-columns: 80% 1fr; }
+      div.sheet-pc div.sheet-equipment div.sheet-combat label:first-child {
+        border-left: 0.5rem solid black; }
   div.sheet-pc div.sheet-column:not(:last-child) {
-    border-right: 1px solid black; }
+    border-right: 0.5rem solid black;
+    padding-right: 2%; }
+  div.sheet-pc div.sheet-squares {
+    text-align: center;
+    display: inline-grid;
+    align-items: start; }
+    div.sheet-pc div.sheet-squares label {
+      border: 1px solid black;
+      width: 5rem;
+      height: 5rem;
+      margin: auto;
+      margin-bottom: 5%;
+      display: grid;
+      align-items: center; }
+    div.sheet-pc div.sheet-squares input {
+      height: 100%;
+      width: 100%; }
+  div.sheet-pc div.sheet-gold input,
+  div.sheet-pc div.sheet-burdens input {
+    text-align: center; }
+  div.sheet-pc div.sheet-burdens label {
+    border-left: 0.5rem solid black; }
+  div.sheet-pc div.sheet-ruin {
+    transition: all 2s; }
+    div.sheet-pc div.sheet-ruin label {
+      position: relative; }
+    div.sheet-pc div.sheet-ruin div.sheet-slash {
+      opacity: 0; }
+    div.sheet-pc div.sheet-ruin input[type='checkbox'] {
+      height: 100%;
+      opacity: 0;
+      width: 100%;
+      position: absolute; }
+      div.sheet-pc div.sheet-ruin input[type='checkbox']:checked + div.sheet-slash {
+        background-color: black;
+        height: 5px;
+        opacity: 1;
+        transform: skewY(-44deg); }
+    div.sheet-pc div.sheet-ruin div.sheet-text-center {
+      position: absolute; }
 
 /*  REPEATING SECTIONS
   ============================= */
-div.sheet-repeating-container button {
-  font-variant: none;
-  width: fit-content;
-  font-size: 1.5rem;
-  padding: 1% 2%; }
-  div.sheet-repeating-container button[type='roll'] {
-    width: 100%; }
-
-div.sheet-repeating-container textarea {
+div.sheet-repeating-container {
   margin-top: 2%; }
-
-div.sheet-repeating-container .repcontrol {
-  margin-top: 5%; }
-
-div.sheet-repeating-container .repcontrol_del {
-  font-family: "pictos";
-  position: relative; }
-
-div.sheet-repeating-container div.sheet-descriptor {
-  grid-template-columns: 1fr repeat(2, 1.5rem);
-  align-items: center;
-  justify-items: center; }
-  div.sheet-repeating-container div.sheet-descriptor div.sheet-collapse {
-    padding-left: 5%; }
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span,
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
-    font-size: 1.5rem; }
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'],
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span {
-    grid-area: 1 / 2 / 1 / 2; }
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'],
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
-    grid-area: 1 / 3 / 1 / 3; }
-  div.sheet-repeating-container div.sheet-descriptor div.sheet-collapse,
-  div.sheet-repeating-container div.sheet-descriptor div.sheet-settings {
-    grid-column: 1 / 4; }
-  div.sheet-repeating-container div.sheet-descriptor div.sheet-settings {
-    grid-template-columns: 1fr;
-    background-color: rgba(76, 76, 76, 0.2);
-    padding: 3% 5%;
-    margin-top: 5%;
+  div.sheet-repeating-container button {
+    font-variant: none;
+    width: fit-content;
+    font-size: 1.5rem;
+    padding: 1% 2%; }
+    div.sheet-repeating-container button[type='roll'] {
+      width: 100%; }
+  div.sheet-repeating-container textarea {
+    margin-top: 2%; }
+  div.sheet-repeating-container div.sheet-skill {
+    border: 1px solid black; }
+  div.sheet-repeating-container .repcontrol {
+    margin-top: 5%; }
+  div.sheet-repeating-container .repcontrol_del {
+    font-family: "pictos";
     position: relative; }
-    div.sheet-repeating-container div.sheet-descriptor div.sheet-settings::before {
-      position: absolute;
-      top: -1rem;
-      left: 50%;
-      content: '';
-      width: 0;
-      height: 0;
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-bottom: 10px solid rgba(76, 76, 76, 0.2); }
+  div.sheet-repeating-container .repitem {
+    margin-bottom: 2%; }
+  div.sheet-repeating-container div.sheet-descriptor {
+    grid-template-columns: 1fr repeat(2, 1.5rem);
+    align-items: center;
+    justify-items: center; }
+    div.sheet-repeating-container div.sheet-descriptor div.sheet-collapse {
+      padding-left: 5%; }
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span,
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
+      font-size: 1.5rem; }
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'],
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span {
+      grid-area: 1 / 2 / 1 / 2; }
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'],
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
+      grid-area: 1 / 3 / 1 / 3; }
+    div.sheet-repeating-container div.sheet-descriptor div.sheet-collapse,
+    div.sheet-repeating-container div.sheet-descriptor div.sheet-settings {
+      grid-column: 1 / 4; }
+    div.sheet-repeating-container div.sheet-descriptor div.sheet-settings {
+      grid-template-columns: 1fr;
+      background-color: rgba(76, 76, 76, 0.2);
+      padding: 3% 5%;
+      margin-top: 5%;
+      position: relative; }
+      div.sheet-repeating-container div.sheet-descriptor div.sheet-settings::before {
+        position: absolute;
+        top: -1rem;
+        left: 50%;
+        content: '';
+        width: 0;
+        height: 0;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-bottom: 10px solid rgba(76, 76, 76, 0.2); }
 
 /*  SHOW & HIDE SECTIONS
   ============================= */
@@ -390,7 +468,7 @@ label.sheet-styled-checkbox input, label.sheet-styled-checkbox span {
   left: 20%; }
 
 label.sheet-styled-checkbox span {
-  border: 2px solid #79016f;
+  border: 2px solid #1e1a1a;
   display: inline-block;
   top: -20%;
   color: transparent;
@@ -403,7 +481,7 @@ label.sheet-styled-checkbox input {
   top: 20%;
   z-index: 2; }
   label.sheet-styled-checkbox input[type="checkbox"]:checked + span {
-    background-color: #79016f;
+    background-color: #1e1a1a;
     color: #fff; }
 
 /*  FOOTER
@@ -426,7 +504,7 @@ label.sheet-styled-checkbox input {
 .sheet-rolltemplate-rolls div.sheet-template-container {
   border: 2px solid black;
   border-radius: 0.3rem;
-  box-shadow: inset 0px 0px 3px 1px #79016f;
+  box-shadow: inset 0px 0px 3px 1px #1e1a1a;
   text-align: center;
   font-family: 'fantasy';
   /* DICE ROLL STYLES
@@ -436,14 +514,14 @@ label.sheet-styled-checkbox input {
   .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.importantroll {
     border: none; }
   .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.fullfail, .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.fullcrit {
-    color: #79016f; }
+    color: #1e1a1a; }
   .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult {
     background-color: transparent;
     border: none;
     font-size: 2rem;
     padding: unset; }
   .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-header {
-    background-color: #79016f;
+    background-color: #1e1a1a;
     border-bottom: 2px solid black;
     color: whitesmoke;
     font-size: 1.5rem;
