--- a/Trophy Gold/src/pug/abstracts/mixins.pug
+++ b/Trophy Gold/src/pug/abstracts/mixins.pug
@@ -30,7 +30,7 @@ mixin repeatingText(name)
 	- const attrName = name.replace(/ /g, '-');
 	fieldset(class=`repeating_${attrName}`)
 		.rowx.grid.descriptor
-			button.text-left.eclipse.font-weight-bold(name='roll_button' type='roll')
+			.skill
 				span(name='attr_name')
 			+checkboxSymbol('collapse', 'i')
 			+checkboxSymbol('settings', 'p')
@@ -39,3 +39,20 @@ mixin repeatingText(name)
 			.rowx.settings
 				+textInput(`name`)
 				+textarea('description')
+
+mixin repeatingBackpack()
+	fieldset(class=`repeating_backpack`)
+		.rowx.grid
+			+textInput(`name`)
+			+textInput(`uses`)
+
+mixin repeatingArmor()
+	fieldset(class=`repeating_armor`)
+		.rowx.grid
+			+textInput(`name`)
+			+textInput(`marked`)
+
+mixin repeatingWeapon()
+	fieldset(class=`repeating_weapon`)
+		.rowx.grid
+			+textInput(`name`)
