--- a/Trophy Gold/src/scss/base/_base.scss
+++ b/Trophy Gold/src/scss/base/_base.scss
@@ -67,20 +67,10 @@ input {
 	&[type="text"],
 	&[type="number"] {
 		background-color: transparent;
-
-		border: {
-			left  : 0rem;
-			radius: 0rem;
-			right : 0rem;
-			top   : 0rem;
-		};
+		border: none;
 		height: 2.1rem;
+		padding: 1% 2%;
 		width: 100%;
-
-		&::placeholder {
-			background-color: $light;
-			border: 0.1em dotted $primary;
-		}
 
 		&:hover {
 			background-color: $secondary;
@@ -130,6 +120,7 @@ textarea {
 	resize        : vertical;
 	vertical-align: top;
 	overflow: scroll;
+	background-color: transparent;
 }
 
 .charsheet {
