--- a/Trophy Gold/src/scss/base/_typography.scss
+++ b/Trophy Gold/src/scss/base/_typography.scss
@@ -8,13 +8,21 @@ h1 {
 h2 {
 	font-size: 1.5rem;
   line-height: 2rem;
-	text-transform: capitalize;
+  text-transform: capitalize;
+  font-variant: small-caps;
+  margin-bottom: 2%;
 }
 
 h3 {
 	font-size: 1.25rem;
 	line-height: 2rem;
-	text-transform: capitalize;
+  text-transform: capitalize;
+  font-style: italic;
+}
+
+h4 {
+  font-size: 0.8rem;
+  text-transform: uppercase; 
 }
 
 label {
