--- a/Trophy Gold/src/scss/base/_utilities.scss
+++ b/Trophy Gold/src/scss/base/_utilities.scss
@@ -39,6 +39,10 @@
 		writing-mode: vertical-lr;
 	}
 
+	.sheet-text-center {
+		text-align: center;
+	}
+
 	div.sheet-2column {
 		grid-template-columns: repeat(2, 1fr); 
 	}
