--- a/Trophy Gold/src/scss/components/_repeating_container.scss
+++ b/Trophy Gold/src/scss/components/_repeating_container.scss
@@ -1,4 +1,6 @@
 div.sheet-repeating-container {
+	margin-top: 2%;
+
 	button { 
 		font-variant: none;
 		width: fit-content;
@@ -14,6 +16,10 @@ div.sheet-repeating-container {
 		margin-top: 2%;
 	}
 
+	div.sheet-skill {
+		border: 1px solid $dark;
+	}
+
 	.repcontrol {
 		margin-top: 5%;
 	}
@@ -21,6 +27,10 @@ div.sheet-repeating-container {
 	.repcontrol_del {
 		font-family: "pictos";
 		position: relative;
+	}
+
+	.repitem {
+		margin-bottom: 2%;
 	}
 
 	div.sheet-descriptor {
