--- a/Trophy Gold/trophygold.pug
+++ b/Trophy Gold/trophygold.pug
@@ -18,8 +18,8 @@ include src/pug/layout/footer.pug
 
 //-ROLL TEMPLATE
   =============================
-//- include src/pug/components/rolltemplates.pug
+include src/pug/components/rolltemplates.pug
 
 //- SCRIPTS
-//-script(type="text/worker")
-//-  include src/js/scripts.js
+script(type="text/worker")
+  include src/js/scripts.js
