--- a/Trophy Gold/src/scss/abstracts/_variables.scss
+++ b/Trophy Gold/src/scss/abstracts/_variables.scss
@@ -1,5 +1,5 @@
-$primary: hsl(305, 98%, 24%);
-$secondary: hsla(253, 35%, 61%, 0.25);
+$primary: #1e1a1a;
+$secondary: #d8d6d0;
 $light: #b9dadf;
 $dark: hsl(0, 6%, 0%);
 $dark-font: #000;
@@ -14,3 +14,7 @@ $box-shadow-outset: -1px -1px 1px 1px rgba($dark, .5);
 //Transition buttons
 $button-scale-small: scale(1.1);
 $button-scale-medium: scale(1.3);
+
+//Borders
+$border-thick-left: 0.5rem solid $dark;
+$border-thin: 1px solid $dark;
